<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_details"
        android:title="@string/details"
        android:icon="@drawable/ic_info"
        app:showAsAction="always"
        android:orderInCategory="6"
        />

    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_action_change_name"
        android:title="@string/rename"
        app:showAsAction="always"
        android:orderInCategory="5"
        />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        android:orderInCategory="7"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_action_copy"
        android:title="@string/copy"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/ic_action_cut"
        android:title="@string/cut"
        android:orderInCategory="6"
        app:showAsAction="never" />






</menu>