<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/radSaveFile"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/margin_thin"
        android:layout_marginTop="@dimen/margin_thin">
        <RadioButton
            android:id="@+id/radOverwrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overwrite_existing_file"
            />

        <RadioButton
            android:layout_marginTop="@dimen/margin_thin"
            android:id="@+id/radMakeNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_a_new_file" >
           <!-- <EditText
                android:id="@+id/dialog_tvNewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_thin"
                android:hint="@string/enter_new_name"/>-->
        </RadioButton>

    </RadioGroup>
    <EditText
        android:id="@+id/dialog_tvNewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/margin_thin"
        android:hint="@string/enter_new_name"/>
</LinearLayout>